--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -3,8 +3,8 @@
         <div class="logo">
             <a href="{{ url_for('index') }}">
                 {# You can put an img tag here for a logo later #}
-                <img src="{{ url_for('static', filename='assets/test.png') }}" alt="Site Logo" style="height: 50px; vertical-align: middle;">
-                SiteNexus Starter
+                {#<img src="{{ url_for('static', filename='assets/test.jpg') }}" alt="Site Logo" style="height: 50px; vertical-align: middle;">#}
+                426CUSTOMS (RoughDraft)
             </a>
         </div>
         <nav class="main-navigation">
